--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@angular/compiler": "^20.0.3",
     "@angular/core": "^20.0.3",
     "@angular/forms": "^20.0.3",
+    "@angular/google-maps": "^20.1.5",
     "@angular/platform-browser": "^20.0.3",
     "@angular/platform-browser-dynamic": "^20.0.3",
     "@angular/platform-server": "^20.0.3",
     "@angular/router": "^20.0.3",
     "@angular/ssr": "^20.0.2",
     "express": "^4.18.2",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@angular/compiler-cli": "^20.0.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
