--- a/angular.json
+++ b/angular.json
@@ -27,14 +27,14 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/404.html"
+              "src/assets"
             ],
-            "styles": [
+             "styles": [
+              "node_modules/aos/dist/aos.css",
               "src/styles.scss", 
               "node_modules/leaflet/dist/leaflet.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/aos/dist/aos.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -99,14 +99,14 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/404.html"
+              "src/assets"
             ],
-            "styles": [
+             "styles": [
+              "node_modules/aos/dist/aos.css",
               "src/styles.scss", 
               "node_modules/leaflet/dist/leaflet.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/aos/dist/aos.js"]
           }
         },
         "deploy": {
