--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
             "server": "src/main.server.ts",
             "prerender": false,
             "ssr": {
-              "entry": "server.ts"
+              "entry": "src/server.ts"
             },
             "define": {
               "ngServerMode": "true"
