--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular/build:application",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/rsvp",
             "index": "src/index.html",
@@ -41,9 +41,6 @@
             "prerender": false,
             "ssr": {
               "entry": "src/server.ts"
-            },
-            "define": {
-              "ngServerMode": "true"
             }
           },
           "configurations": {
