--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "ng build"
-  publish = "dist/rsvp"
+  publish = "dist/rsvp/browser"
 
 [[plugins]]
   package = "@netlify/angular-runtime"
