--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,3 @@
 [build]
-  command = "ng build"
+  command = "ng build --configuration production"
   publish = "dist/rsvp/browser"
-
-[[plugins]]
-  package = "@netlify/angular-runtime"
-  
-  [plugins.inputs]
-    disableSSR = true
