--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:rsvp": "node dist/rsvp/server/server.mjs"
+    "serve:ssr:rsvp": "node dist/rsvp/server/server.mjs",
+    "build:static": "ng build --configuration production --output-hashing=all"
   },
   "private": true,
   "dependencies": {
