--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [build]
-  command = "npm run build:static"
+  command = "ng build --configuration production"
   publish = "dist/rsvp/browser"
 
-[build.environment]
-  NODE_VERSION = "18"
+# Force static deployment by setting edge functions to empty
+[[edge_functions]]
+  # This empty section prevents automatic edge function creation
+
+[functions]
+  # Disable functions entirely
+  directory = "nonexistent"
