--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:rsvp": "node dist/rsvp/server/server.mjs",
-    "build:static": "ng build --configuration production --output-hashing=all"
+    "serve:ssr:rsvp": "node dist/rsvp/server/server.mjs"
   },
   "private": true,
   "dependencies": {
