--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-command = "ng build --configuration production && ng run rsvp:server:production"
-publish = "dist/rsvp/browser"
+  command = "ng build"
+  publish = "dist/rsvp/browser"
+
+[[plugins]]
+  package = "@netlify/angular-runtime"
